versión final quiz

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/main.js" defer></script>
+    <script src="js/main2.js" defer></script>
+    <script src="js/data.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Quiz</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Yeon+Sung&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section id="welcome">
+    <!--<section id="welcome">
         <h1>Quiz - The Bridge</h1>
         <img src="https://raw.githubusercontent.com/TheBridge-FullStackDeveloper/proyectos-quiz/master/secondary.gif" alt="">
         <p>¿Te atreves con el quiz?</p>
         <button>¡Empezar!</button>
-    </section>
+    </section>-->
 </body>
 </html>
